--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=server
+
+# ?????? ?? (??? DB ??? ?? ??)
+spring.datasource.url=jdbc:postgresql://localhost:5432/devfolio
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA ?? (??? ?? ??)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
