--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "20": "^3.1.9",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "wouter": "^3.8.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
